# particle

./: .gitignore  .gitmodules  CMakeLists.txt  README
cmake/Modules/: FindMKL.cmake  Findpvfmm.cmake
cmake/toolchains/: Maverick-intel-impi.cmake  Stampede-intel-impi.cmake
include/: convert_elemental.hpp  convert_petsc.hpp  funcs.hpp  helm_kernels.hpp  helm_kernels.txx  ops.hpp  particle_tree.hpp  particle_tree.txx  point_distribs.hpp  vec_ops.hpp  vec_ops.txx
include/par_scan/: gen_scan.hpp  scan.cpp
scripts/: plot_eta.py  run.sh  run_faims.sh  watch.sh
src/: convert_elemental.cpp  funcs.cpp  helm_kernels.cpp  ops.cpp  particle_tree.cpp  point_distribs.cpp  vec_ops.cpp
test/: faims.cpp  pts_test.cpp
